2009-11-04  Vadim Kurland  <vadim@vk.crocodile.org>

	* fwbuilder.dtd.in: Added attribute any_opt to IPService

2009-11-02  Vadim Kurland  <vadim@vk.crocodile.org>

	* IPService.cpp (IPService::hasIpOptions): Method hasIpOptions()
	returns true if IPService object has one or more of the IP options:
	lsrr, rr, ssrr, ts, rtr_alt

	* fwbuilder.dtd.in: Added attributes rtralt and rtralt_value to
	IPService

2009-10-13  vadim  <vadim@vk.crocodile.org>

	* VERSION (VERSION): started v3.0.8

2009-09-18  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler.cpp (ItfNegation::processNext): fix for bug
	#2710034 "PF Compiler in 3.0.3 Unprotected Interface Bug". When we
	expand "interface" rule element which uses negation, skip
	unprotected interfaces.

2009-08-28  vadim  <vadim@vk.crocodile.org>

	* Interface.cpp (Interface::getOptionsObjectConst): Added
	Interface::getOptionsObjectconst(), Interface::isSlave()

2009-08-24  vadim  <vadim@vk.crocodile.org>

	* Compiler_cluster.cpp (Compiler::processFailoverGroup): cluster
	interface may not need an ip address, but this depends on the
	failover protocol. Adding check for when the address is missing.
	See #337

2009-08-12  vadim  <vadim@vk.crocodile.org>

	* NATCompiler.cpp (classifyNATRule::processNext): fixed bug
	#2836321: "SNAT rule that changes Trans Src and Trans Port does
	not work". Dual translation rule that changes source address and
	destination port was not supported.

2009-08-03  vadim  <vadim@vk.crocodile.org>

	* Compiler.cpp (Compiler::_expandInterface): See #284:
	PolicyCompiler::ExpandMultipleAddresses and
	NATCompiler::ExpandMultipleAddresses should include subinterfaces

2009-08-02  vadim  <vadim@vk.crocodile.org>

	* Interface.cpp (Interface::validateChild): DTD does not allow
	nested subinterfaces; only one level of subinterfaces is supported.
	Interface::validateChild() now checks for this condition.

2009-07-29  vadim  <vadim@vk.crocodile.org>

	* snmp.h (class SNMPCrawler): Removed obsolete parameter